--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.11.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "react-slick": "^0.29.0",
+    "react-spinners": "^0.13.8",
     "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.0.0",
