--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^6.18.0",
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.0.0",
